--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1046,7 +1046,7 @@ Layout/LineEndStringConcatenationIndentation:
 Layout/LineLength:
   Description: 'Checks that line length does not exceed the configured limit.'
   StyleGuide: '#max-line-length'
-  Enabled: true
+  Enabled: false
   VersionAdded: '0.25'
   VersionChanged: '1.4'
   Max: 120
