--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -66,6 +66,9 @@ Metrics/MethodLength:
 Metrics/PerceivedComplexity:
   Max: 9
 
+Metrics/BlockLength:
+  Max: 50
+
 # Offense count: 4
 # Configuration parameters: AllowedConstants.
 Style/Documentation:
