Teat: Remove cop for max block length

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2538,11 +2538,11 @@ Metrics/AbcSize:
 
 Metrics/BlockLength:
   Description: 'Avoid long blocks with many lines.'
-  Enabled: true
+  Enabled: false
   VersionAdded: '0.44'
   VersionChanged: '1.5'
   CountComments: false  # count full line comments?
-  Max: 50
+  Max: 25
   CountAsOne: []
   AllowedMethods:
     # By default, exclude the `#refine` method, as it tends to have larger
