refactor: for rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2830,7 +2830,7 @@ Naming/InclusiveLanguage:
 Naming/MemoizedInstanceVariableName:
   Description: >-
     Memoized method name should match memo instance variable name.
-  Enabled: true
+  Enabled: false
   VersionAdded: '0.53'
   VersionChanged: '1.2'
   EnforcedStyleForLeadingUnderscores: disallowed
