--- a/spec/fixtures/vcr_cassettes/Create_watch_party/As_a_visitor_when_I_visit_movie_show_page/can_display_a_button_to_make_a_new_movie.yml
+++ b/spec/fixtures/vcr_cassettes/Create_watch_party/As_a_visitor_when_I_visit_movie_show_page/can_display_a_button_to_make_a_new_movie.yml
@@ -27,36 +27,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 07 Jul 2023 20:44:40 GMT
+      - Sat, 08 Jul 2023 05:08:52 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25305
+      - public, max-age=26277
       X-Memc:
       - HIT
       X-Memc-Key:
       - 50e253f7e3769df8918cea1862b1c972
       X-Memc-Age:
-      - '3482'
+      - '10052'
       X-Memc-Expires:
-      - '19723'
+      - '16523'
       Etag:
-      - W/"1192fde4326a260f1802f136865e9bdc"
+      - W/"ca68328635d2595ee004a7fa88458041"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 97971aa6c140e2dfc8adaee6c929eedc.cloudfront.net (CloudFront)
+      - 1.1 181a665d1a0b3047b4fa647eeabfb330.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - IAD55-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - uA-9TRjRNqGhVBmkWAXiicmIzCpJmeUzABoDCtUkwo0bD_mMtP_5Pw==
+      - xmNyI_N5TXM1pRJ8elKB20d_Klka_9-eEc4e6FvZ90i_Y_8VP6MXeQ==
       Age:
-      - '2671'
+      - '69'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
@@ -64,222 +64,12 @@ http_interactions:
         of his abducted sister unwittingly taps into hidden powers, he discovers he
         might be the only person alive who can protect a reincarnated goddess, sent
         to watch over humanity. Can he let his past go and embrace his destiny to
-        become a Knight of the Zodiac?","popularity":3369.887,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
+        become a Knight of the Zodiac?","popularity":3154.453,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
         6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
         Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
-        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.575,"vote_count":326}'
-  recorded_at: Fri, 07 Jul 2023 21:29:11 GMT
-- request:
-    method: get
-    uri: https://api.themoviedb.org/3/movie/455476
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Authorization:
-      - Hide_API
-      User-Agent:
-      - Faraday v2.7.10
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json;charset=utf-8
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Date:
-      - Fri, 07 Jul 2023 20:44:40 GMT
-      Server:
-      - openresty
-      Cache-Control:
-      - public, max-age=25305
-      X-Memc:
-      - HIT
-      X-Memc-Key:
-      - 50e253f7e3769df8918cea1862b1c972
-      X-Memc-Age:
-      - '3482'
-      X-Memc-Expires:
-      - '19723'
-      Etag:
-      - W/"1192fde4326a260f1802f136865e9bdc"
-      Vary:
-      - Accept-Encoding
-      - Origin
-      X-Cache:
-      - Hit from cloudfront
-      Via:
-      - 1.1 98e30e5953336545df428a8f5923a288.cloudfront.net (CloudFront)
-      X-Amz-Cf-Pop:
-      - IAD89-C3
-      Alt-Svc:
-      - h3=":443"; ma=86400
-      X-Amz-Cf-Id:
-      - YaDRTeupGy07gz22p8n2ssifpdmKOrhLFpkJmliNN8PW9sijQFzBEA==
-      Age:
-      - '2671'
-    body:
-      encoding: ASCII-8BIT
-      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
-        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
-        of his abducted sister unwittingly taps into hidden powers, he discovers he
-        might be the only person alive who can protect a reincarnated goddess, sent
-        to watch over humanity. Can he let his past go and embrace his destiny to
-        become a Knight of the Zodiac?","popularity":3369.887,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
-        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
-        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
-        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
-        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.575,"vote_count":326}'
-  recorded_at: Fri, 07 Jul 2023 21:29:11 GMT
-- request:
-    method: get
-    uri: https://api.themoviedb.org/3/movie/455476
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Authorization:
-      - Hide_API
-      User-Agent:
-      - Faraday v2.7.10
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json;charset=utf-8
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Date:
-      - Fri, 07 Jul 2023 20:44:40 GMT
-      Server:
-      - openresty
-      Cache-Control:
-      - public, max-age=25305
-      X-Memc:
-      - HIT
-      X-Memc-Key:
-      - 50e253f7e3769df8918cea1862b1c972
-      X-Memc-Age:
-      - '3482'
-      X-Memc-Expires:
-      - '19723'
-      Etag:
-      - W/"1192fde4326a260f1802f136865e9bdc"
-      Vary:
-      - Accept-Encoding
-      - Origin
-      X-Cache:
-      - Hit from cloudfront
-      Via:
-      - 1.1 a497eba714f030335fd7adebea6fe8b6.cloudfront.net (CloudFront)
-      X-Amz-Cf-Pop:
-      - IAD89-C3
-      Alt-Svc:
-      - h3=":443"; ma=86400
-      X-Amz-Cf-Id:
-      - DfLJRz7k0ir3DVDpKRoB2VkxqYPrI_feGjFfN5bobNBj3RHjOqZ5OA==
-      Age:
-      - '2672'
-    body:
-      encoding: ASCII-8BIT
-      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
-        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
-        of his abducted sister unwittingly taps into hidden powers, he discovers he
-        might be the only person alive who can protect a reincarnated goddess, sent
-        to watch over humanity. Can he let his past go and embrace his destiny to
-        become a Knight of the Zodiac?","popularity":3369.887,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
-        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
-        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
-        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
-        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.575,"vote_count":326}'
-  recorded_at: Fri, 07 Jul 2023 21:29:12 GMT
-- request:
-    method: get
-    uri: https://api.themoviedb.org/3/movie/455476
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Authorization:
-      - Hide_API
-      User-Agent:
-      - Faraday v2.7.10
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json;charset=utf-8
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Date:
-      - Fri, 07 Jul 2023 20:44:40 GMT
-      Server:
-      - openresty
-      Cache-Control:
-      - public, max-age=25305
-      X-Memc:
-      - HIT
-      X-Memc-Key:
-      - 50e253f7e3769df8918cea1862b1c972
-      X-Memc-Age:
-      - '3482'
-      X-Memc-Expires:
-      - '19723'
-      Etag:
-      - W/"1192fde4326a260f1802f136865e9bdc"
-      Vary:
-      - Accept-Encoding
-      - Origin
-      X-Cache:
-      - Hit from cloudfront
-      Via:
-      - 1.1 156336391961f724345f6534c674b6ea.cloudfront.net (CloudFront)
-      X-Amz-Cf-Pop:
-      - IAD89-C3
-      Alt-Svc:
-      - h3=":443"; ma=86400
-      X-Amz-Cf-Id:
-      - aw9vQPb6O2OtZwRLC3J7whdJVXoCrBVGIx6w8uGTTkXXJ1Z14lvEGw==
-      Age:
-      - '2672'
-    body:
-      encoding: ASCII-8BIT
-      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
-        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
-        of his abducted sister unwittingly taps into hidden powers, he discovers he
-        might be the only person alive who can protect a reincarnated goddess, sent
-        to watch over humanity. Can he let his past go and embrace his destiny to
-        become a Knight of the Zodiac?","popularity":3369.887,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
-        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
-        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
-        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
-        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.575,"vote_count":326}'
-  recorded_at: Fri, 07 Jul 2023 21:29:12 GMT
+        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.564,"vote_count":328}'
+  recorded_at: Sat, 08 Jul 2023 05:10:01 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/455476
@@ -328,13 +118,153 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 1b0f041f103652001e37f5806000d24a.cloudfront.net (CloudFront)
+      - 1.1 44dd03c6d93a5b4e66aa5cea227acbb2.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - IAD55-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - GZOs8vftxlA5B05qBKneY6jtg3Y2bw2NCrHaaQYf-u2MLlKYURBcmA==
+      - b70sEE7oIKiDIvyIwa3pnnsPYcCxIJST7i1oPtHScM43QAZSAvCgjw==
+      Age:
+      - '69'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
+        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
+        of his abducted sister unwittingly taps into hidden powers, he discovers he
+        might be the only person alive who can protect a reincarnated goddess, sent
+        to watch over humanity. Can he let his past go and embrace his destiny to
+        become a Knight of the Zodiac?","popularity":3154.453,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
+        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
+        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
+        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
+        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.564,"vote_count":328}'
+  recorded_at: Sat, 08 Jul 2023 05:10:01 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/455476
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Authorization:
+      - Hide_API
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Sat, 08 Jul 2023 05:08:52 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=26277
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 50e253f7e3769df8918cea1862b1c972
+      X-Memc-Age:
+      - '10052'
+      X-Memc-Expires:
+      - '16523'
+      Etag:
+      - W/"ca68328635d2595ee004a7fa88458041"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 1dfba6c05648522e13059c944a28466e.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - IAD55-P3
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - XI9y_r2tMwlQpBECFoQucSwLcbQByyFJvMhpufLP7kOjPdnLou7jww==
+      Age:
+      - '70'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
+        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
+        of his abducted sister unwittingly taps into hidden powers, he discovers he
+        might be the only person alive who can protect a reincarnated goddess, sent
+        to watch over humanity. Can he let his past go and embrace his destiny to
+        become a Knight of the Zodiac?","popularity":3154.453,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
+        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
+        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
+        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
+        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.564,"vote_count":328}'
+  recorded_at: Sat, 08 Jul 2023 05:10:01 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/455476
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Authorization:
+      - Hide_API
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Sat, 08 Jul 2023 05:08:52 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=26277
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 50e253f7e3769df8918cea1862b1c972
+      X-Memc-Age:
+      - '10052'
+      X-Memc-Expires:
+      - '16523'
+      Etag:
+      - W/"ca68328635d2595ee004a7fa88458041"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 65566883560611dde36b4dfe13fd3272.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - IAD55-P3
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - _0fKJRsMCP9APgdKCcddWnZ9VE6KCR6ebcZ1yQU3x1D6-nH163HARw==
       Age:
       - '652'
     body:
