--- a/spec/fixtures/vcr_cassettes/MovieFacade/instance_methods/_movie.yml
+++ b/spec/fixtures/vcr_cassettes/MovieFacade/instance_methods/_movie.yml
@@ -27,34 +27,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 14:34:03 GMT
+      - Sat, 08 Jul 2023 14:13:49 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22818
+      - public, max-age=28737
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '13645'
+      - '10652'
       X-Memc-Expires:
-      - '10105'
+      - '13098'
       Etag:
       - W/"4e64c67cc67267ae1afc2087b799df87"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 caa4d8b79c1a88679b6829e9c831df6a.cloudfront.net (CloudFront)
+      - 1.1 e1b5abb53c407f0a057625c46693461c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DFW57-P2
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 4LUYAcT73be5eMZiRQo51YjBXaFq65Lty1eqkHm20YwlPE3NgXEEpg==
+      - _XhgvUG7JitIABDOcMIO-ATwNLh40N2WwvYLY1KcCkXbF7hCY5hPGg==
+      Age:
+      - '13131'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -67,5 +69,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.71,"vote_count":18189}'
-  recorded_at: Sat, 08 Jul 2023 14:34:02 GMT
+  recorded_at: Sat, 08 Jul 2023 17:52:40 GMT
 recorded_with: VCR 6.2.0
