--- a/spec/fixtures/vcr_cassettes/New_Viewing_Party_Page/new_viewing_party_form/displays_a_from_to_create_a_new_viewing_party.yml
+++ b/spec/fixtures/vcr_cassettes/New_Viewing_Party_Page/new_viewing_party_form/displays_a_from_to_create_a_new_viewing_party.yml
@@ -25,36 +25,34 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 16:50:18 GMT
+      - Sat, 08 Jul 2023 20:23:21 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25525
+      - public, max-age=22584
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '4650'
+      - '16515'
       X-Memc-Expires:
-      - '17538'
+      - '5673'
       Etag:
       - W/"0957ffa2708c9495fd17437fb9076902"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 e7ff4a714a3b1f464db9c76ee954a564.cloudfront.net (CloudFront)
+      - 1.1 bd02c4a72f88f2bbd693051675941962.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - ORD58-P1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - iGceQS7ZKIvIr7PIm-VBsH9eTKL4gn3_NzBZTJk5vxT2jpBQqS9Aew==
-      Age:
-      - '4169'
+      - vH-Oq0V9Lz46HqLvakv5eX68KDZJQ4quR8iI0phMaHbhizBPrgOqGw==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -69,7 +67,7 @@ http_interactions:
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
         long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 17:59:47 GMT
+  recorded_at: Sat, 08 Jul 2023 20:23:21 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/11?api_key=972b6f94cd2b25b1d64607afa76aa0e7
@@ -95,19 +93,19 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 08 Jul 2023 16:50:18 GMT
+      - Sat, 08 Jul 2023 20:23:21 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25525
+      - public, max-age=22584
       X-Memc:
       - HIT
       X-Memc-Key:
       - a3dde13b574bdd203b706f79c6da42d3
       X-Memc-Age:
-      - '4650'
+      - '16515'
       X-Memc-Expires:
-      - '17538'
+      - '5673'
       Etag:
       - W/"0957ffa2708c9495fd17437fb9076902"
       Vary:
@@ -116,15 +114,13 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 29f1da35ce271d2cdc88184ed0c1f86c.cloudfront.net (CloudFront)
+      - 1.1 57f0537bdb26692a5be92bbbe93e4ea2.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - ORD58-P1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - tmDA_gKLPjgVwPD2xP6JfwxxiQBjSgPSrkuAq100MnRBRN45VsgU1g==
-      Age:
-      - '4169'
+      - 43oATeHFaBk78j52Qbr2xmzJXN61i7oF9pmceunfGvkcBiKASt0rfQ==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/zqkmTXzjkAgXmEWLRsY4UpTWCeo.jpg","belongs_to_collection":{"id":10,"name":"Star
@@ -139,5 +135,5 @@ http_interactions:
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1977-05-25","revenue":775398007,"runtime":121,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
         long time ago in a galaxy far, far away...","title":"Star Wars","video":false,"vote_average":8.203,"vote_count":18840}'
-  recorded_at: Sat, 08 Jul 2023 17:59:47 GMT
+  recorded_at: Sat, 08 Jul 2023 20:23:21 GMT
 recorded_with: VCR 6.2.0
