--- a/spec/fixtures/vcr_cassettes/Create_watch_party/As_a_visitor_when_I_visit_movie_show_page/can_display_movie_details_on_watch_party_create_page.yml
+++ b/spec/fixtures/vcr_cassettes/Create_watch_party/As_a_visitor_when_I_visit_movie_show_page/can_display_movie_details_on_watch_party_create_page.yml
@@ -1032,4 +1032,63 @@ http_interactions:
         States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
         beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.549,"vote_count":338}'
   recorded_at: Sat, 08 Jul 2023 21:04:20 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/455476/reviews
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Authorization:
+      - Hide_API
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Sat, 08 Jul 2023 21:50:52 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=24958
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 2ed012597d390310723b24a555b3701e
+      X-Memc-Age:
+      - '2791'
+      X-Memc-Expires:
+      - '20957'
+      Etag:
+      - W/"1465fd481f05160d41910452258e5531"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 23c9ec01b6f4151f654547c0190aeebe.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - IAD89-C3
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - IDfYES5oZh1WkzCjJ2-IytT6tl3js3eJXxlDyc4Su6Asd3-qfGmdkA==
+    body:
+      encoding: ASCII-8BIT
+      string: '{"id":455476,"page":1,"results":[],"total_pages":0,"total_results":0}'
+  recorded_at: Sat, 08 Jul 2023 21:50:53 GMT
 recorded_with: VCR 6.2.0
