update user create test

--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,11 @@
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
+/coverage
 
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/coverage/
 # Ignore formatting
 /config/application.yml
